# fancy-plugin-example

./: .dockerignore  .gitignore  Cargo.toml  README.md  plugin.example.ini
.github/workflows/: ci.yml
examples/chat-card/: Cargo.toml  README.md  plugin.example.ini
examples/chat-card/src/: lib.rs
examples/feedback-form/: Cargo.toml  README.md  plugin.example.ini
examples/feedback-form/src/: lib.rs
examples/gallery-showcase/: Cargo.toml  README.md  plugin.example.ini
examples/gallery-showcase/src/: lib.rs
examples/greeter/: Cargo.toml  README.md  plugin.example.ini
examples/greeter/src/: config.rs  lib.rs
examples/info-card/: Cargo.toml  README.md  plugin.example.ini
examples/info-card/src/: lib.rs
examples/quick-poll/: Cargo.toml  README.md  plugin.example.ini
examples/quick-poll/src/: lib.rs
src/: config.rs  interactions.rs  lib.rs  server.rs  types.rs
