# ---------------------------------------------------------------------------
# Cargo workspace for the Fancy Mumble plugin examples.
#
# Each member crate under `examples/<name>/` is a self-contained plugin
# that compiles to its own `cdylib` and ships as its own CI artefact.
# Keep the individual examples small and focused; add a new member
# rather than piling features onto an existing one.
# ---------------------------------------------------------------------------
[workspace]
resolver = "2"
members = [
    "examples/greeter",
    "examples/gallery-showcase",
    "examples/info-card",
    "examples/feedback-form",
]

# ---------------------------------------------------------------------------
# Shared package metadata.  Members override `name` and `description`
# but inherit version/edition/license so we bump them in one place.
# ---------------------------------------------------------------------------
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Fancy Mumble"]
repository = "https://github.com/Fancy-Mumble/fancy-plugin-example"

# ---------------------------------------------------------------------------
# Shared dependency declarations.  Members opt in with
# `mumble-plugin-api = { workspace = true }` so the path / version is
# defined exactly once.
# ---------------------------------------------------------------------------
[workspace.dependencies]
mumble-plugin-api = { path = "../mumble-server/3rdparty/mumble-plugin-host/api" }
abi_stable = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

# ---------------------------------------------------------------------------
# Workspace-wide lint configuration.  Members opt in via
# `[lints] workspace = true` so the policy is defined in one place.
# Mirrors the lints used by `mumble-plugin-host` itself.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_crate_dependencies = "warn"
unused_results = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
correctness    = { level = "deny",  priority = -1 }
suspicious     = { level = "warn",  priority = -1 }
style          = { level = "warn",  priority = -1 }
perf           = { level = "warn",  priority = -1 }
unwrap_used            = "deny"
excessive_nesting      = "deny"
too_many_lines         = "deny"
allow_attributes_without_reason = "deny"
uninlined_format_args  = "warn"
doc_markdown           = "warn"

# ---------------------------------------------------------------------------
# Release profile - small, stripped cdylibs suitable for shipping to
# `/etc/mumble/plugins`.
# ---------------------------------------------------------------------------
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
