[package]
name = "fancy-chat-card"
description = "Example Fancy Mumble plugin: posts literal chat messages with attached components."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Dynamically loaded plugin; see `greeter/Cargo.toml` for the rationale
# behind shipping both `cdylib` (for the host) and `rlib` (for tests).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mumble-plugin-api = { workspace = true }
abi_stable = { workspace = true }

[lints]
workspace = true
