[package]
name = "fancy-gallery-showcase"
description = "Example Fancy Mumble plugin - demonstrates Thumbnail, MediaGallery and Container."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mumble-plugin-api = { workspace = true }
abi_stable = { workspace = true }

[lints]
workspace = true
