[package]
name = "fancy-quick-poll"
description = "Example Fancy Mumble plugin: collects a question + options via a modal, posts a chat bubble with a vote dropdown, and rewrites the bubble in place as votes come in."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Dynamically loaded plugin; see `greeter/Cargo.toml` for the rationale
# behind shipping both `cdylib` (for the host) and `rlib` (for tests).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mumble-plugin-api = { workspace = true }
abi_stable = { workspace = true }

[lints]
workspace = true
